# remap

./: .gitignore  Cargo.toml
remap/: Cargo.toml  model.sql
remap-derive/: Cargo.toml
remap-derive/src/: extend.rs  lib.rs
remap/src/: arguments.rs  config.rs  extend.rs  lib.rs  mysql.rs  table.rs  template2.rs
remap/src/template/: mod.rs  mysql.rs
