[package]
name = "remap"
version = "0.1.0"
authors = ["tuztu <tuztucode@gmail.com>"]
edition = "2018"

[lib]
name = "remap"

[dependencies]
anyhow = "1.0.38"
async-std = "1.9.0"
sqlx = { version = "0.5.1", features = [ "runtime-async-std-rustls", "mysql", "macros", "chrono", "json" ]}
sql-builder = "3.1.1"
once_cell = "1.7.0"
heck = "0.3.2"

remap-derive = {package = "remap-derive", path = "../remap-derive"}

[dev-dependencies]
futures-await-test = "0.3.0"
